--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html long=""en>
+<head>
+    <meta charset="UTF-8">
+    <title>My Portfolio</title>
+</head>
+<body>
+<h1>Salma Yu's Portfolio</h1>
+<h2>I'm a Web Developer</h2>
+<hr>
+<h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+<img src="./assets/images/My Top 3 movies.png" alt="Movie Ranking Project Preview" height="200"/>
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+<h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+<img src="./assets/images/Salma's birthday.png" alt="birthday invite project preview" height="200"/><br><br>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<a href="./public/about.html">AboutMe</a>  
+<a href="./public/contact.html">Contact Me</a>
+<hr>
+</body>
+</html>
