--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,9 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h1>The Best Movies According to Salma</h1>
+<h2>My top 3 movies of all-time .</h2>
+<hr/>
+<h3>From </h3>
+<p>this is my favourite movie.I love the beautiful images.</p>
+<h3>Home Alone</h3>
+<p>This is an awesome movie to watch with my family </p>
+<h3>Installer</h3>
+<p>Super film I watched many times.</p>
